--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -10,11 +9,14 @@
 	<h1 id="active">Number Guessing </h1>
 	<p>Guess a number between 1-100</p>
   <p>Enter a Guess</p>
-  <input type ="text" id="userInput"><button id="btn">Submit</button>
-
+  <input type ="text" id="userInput"><button id="submit">Submit</button>
+<div id="output"></div>
      
+<!DOCTYPE html>
 
       <script src="script.js"></script> 
+
+
 </div>
 </body>
 </html>	
