--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	<h1 id="active">Number Guessing </h1>
 	<p>Guess a number between 1-100</p>
   <p>Enter a Guess</p>
-  <input type ="text" id="userInput"><button id="submit">Submit</button>
+  <label for="number"></label>
+  <input type ="number" id="userInput"><button id="submit">Submit</button>
 <div id="output"></div>
-   
+
 
       <script src="script.js"></script> 
 
